--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - selenium-hub
       - db
       - adminer
+    env_file:
+      - .env
     restart: always
 
   minio:
@@ -21,9 +23,8 @@ services:
       - "9001:9001"
     volumes:
       - minio_storage:/data
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+    env_file:
+      - .env
     command: server --console-address ":9001" /data
 
   firefox:
@@ -31,10 +32,8 @@ services:
     shm_size: 2gb
     depends_on:
       - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+    env_file:
+      - .env
 
   selenium-hub:
     image: selenium/hub:4.18.1-20240224
@@ -53,10 +52,8 @@ services:
         target: /dev/shm
         tmpfs:
           size: 134217728
-    environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
+    env_file:
+      - .env
     ports:
       - "5432:5432"
 
